--- a/datasets/orthodb_preparation/data.ipynb
+++ b/datasets/orthodb_preparation/data.ipynb
@@ -121,7 +121,7 @@
     "ogs_df = pd.read_csv(\n",
     "    OUT/\"odb12v2_OGs.tab.gz\",\n",
     "    sep=\"\\t\", header=None, compression=\"gzip\",\n",
-    "    names=[\"og_id\",\"level_taxid\",\"og_name\"]  # schema da README\n",
+    "    names=[\"og_id\",\"level_taxid\",\"og_name\"]\n",
     ")\n",
     "\n",
     "ogs_in_clade = ogs_df.loc[ogs_df[\"level_taxid\"]==level_id, \"og_id\"].drop_duplicates()\n",
@@ -193,7 +193,7 @@
     "    except Exception as e:\n",
     "        tqdm.write(f\"Failed {i}: {e}\")\n",
     "    if i % 50 == 0:\n",
-    "        time.sleep(1)  # rate-limit gentile\n",
+    "        time.sleep(1)\n",
     "\n",
     "    tqdm.write(f\"Downloaded {i} {og}\")\n"
    ],
@@ -790,8 +790,8 @@
    },
    "cell_type": "code",
    "source": [
-    "input_dir = DATASET_ROOT / \"orthodb_v12/raw\"                # input folder\n",
-    "output_dir = DATASET_ROOT / \"orthodb_v12/no_ambig_imp\"  # output folder\n",
+    "input_dir = DATASET_ROOT / \"orthodb_v12/raw\"\n",
+    "output_dir = DATASET_ROOT / \"orthodb_v12/no_ambig_imp\"\n",
     "output_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "base_counts = {b : symbols[b] for b in \"ACGT\"}\n",
@@ -824,7 +824,6 @@
     "        new_seq = resolve_ambiguous_sequence(seq, base_probs)\n",
     "        new_records.append((header, new_seq))\n",
     "\n",
-    "    # 3) save to new folder with the same filename\n",
     "    write_fasta(out_path, new_records, width=60)\n",
     "\n",
     "print(\"Done.\")"
@@ -5774,8 +5773,8 @@
    },
    "cell_type": "code",
    "source": [
-    "input_dir = DATASET_ROOT / \"orthodb_v12/no_ambig_imp\"      # input folder\n",
-    "output_dir = DATASET_ROOT / \"orthodb_v12/unique_no_ambig_imp\"   # output folder\n",
+    "input_dir = DATASET_ROOT / \"orthodb_v12/no_ambig_imp\"\n",
+    "output_dir = DATASET_ROOT / \"orthodb_v12/unique_no_ambig_imp\"\n",
     "output_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "for in_path in iter_fasta_files(input_dir, patterns=(\"*.fasta\", \"*.fa\", \"*.faa\", \"*.fna\", \"*.cds.fasta\")):\n",
